[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Textures/UITextures/Hitmark.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/Hitmark.gd" type="Script" id=2]
[ext_resource path="res://Resources/Sounds/Guns/Misc/Hitmark.wav" type="AudioStream" id=3]

[node name="Hitmark" type="Control" groups=["HUD"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Hitmark" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 1 )

[node name="HitmarkTimer" type="Timer" parent="Hitmark"]
wait_time = 0.1

[node name="HitmarkSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
stream = ExtResource( 3 )
attenuation_model = 1
max_db = -5.0

[connection signal="timeout" from="Hitmark/HitmarkTimer" to="." method="_on_HitmarkTimer_timeout"]
